Fix content getting cut off in smaller screen

--- a/themes/sky/assets/main.scss
+++ b/themes/sky/assets/main.scss
@@ -37,6 +37,7 @@ main {
 article {
   padding: 1rem;
   max-width: 1100px;
+  width: 100%;
 
   h1 {
     font-size: 2rem;
